gestion des quizz index store middleware
