# app/Docs/AnswerSchema.php
@@ -1,0 +1,12 @@
+<?php
+namespace App\Docs;
+
+/**
+ * @OA\Schema(
+ *     schema="Answer",
+ *     type="object",
+ *     @OA\Property(property="text", type="string", example="Contenu reponse"),
+ *     @OA\Property(property="is_correct", type="boolean", nullable=true,  example="true"),
+ * )
+ */
+class AnswerSchema {}
