# storage/api-docs/api-docs.json
@@ -459,6 +459,92 @@
                 ]
             }
         },
+        "/api/courses/{course}/quizzes": {
+            "get": {
+                "tags": [
+                    "Quiz"
+                ],
+                "summary": "Lister tous les quiz",
+                "operationId": "98aa57513947a36ab3485b4a645d8ad8",
+                "parameters": [
+                    {
+                        "name": "course",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Liste des quiz",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Quiz"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctumAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Quiz"
+                ],
+                "summary": "Création de nouvelle quiz",
+                "operationId": "0356317b77518a698e70bac4e788c672",
+                "parameters": [
+                    {
+                        "name": "course",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Quiz"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Leçon créé avec succès",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Quiz"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Données invalides"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctumAuth": []
+                    }
+                ]
+            }
+        },
         "/api/lesson/{lesson}/resources": {
             "get": {
                 "tags": [
@@ -624,6 +710,20 @@
     },
     "components": {
         "schemas": {
+            "Answer": {
+                "properties": {
+                    "text": {
+                        "type": "string",
+                        "example": "Contenu reponse"
+                    },
+                    "is_correct": {
+                        "type": "boolean",
+                        "example": "true",
+                        "nullable": true
+                    }
+                },
+                "type": "object"
+            },
             "Auth": {
                 "title": "Login",
                 "description": "Schéma pour s'authentifier",
@@ -871,6 +971,45 @@
                 },
                 "type": "object"
             },
+            "Question": {
+                "properties": {
+                    "type": {
+                        "type": "string",
+                        "example": "multiple_choice",
+                        "nullable": true
+                    },
+                    "text": {
+                        "type": "string",
+                        "example": "Contenu quiz"
+                    },
+                    "question": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Answer"
+                        }
+                    }
+                },
+                "type": "object"
+            },
+            "Quiz": {
+                "properties": {
+                    "title": {
+                        "type": "string",
+                        "example": "Quiz 1"
+                    },
+                    "description": {
+                        "type": "string",
+                        "nullable": true
+                    },
+                    "questions": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Question"
+                        }
+                    }
+                },
+                "type": "object"
+            },
             "Ressource": {
                 "required": [
                     "id",
@@ -974,6 +1113,10 @@
         {
             "name": "Leçon",
             "description": "Leçon"
+        },
+        {
+            "name": "Quiz",
+            "description": "Quiz"
         },
         {
             "name": "Ressources",
